--- a/visuals/page.css
+++ b/visuals/page.css
@@ -88,7 +88,7 @@ canvas {
 	top: 0;
 	bottom: 0;
 	background: #00000087;
-	z-index: 2;
+	z-index: 3;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
